--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,21 @@
 @import '../../scss/index.scss';
+
+.icon{
+    width: 40px;
+}
+
+.icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-item{
+    align-content: center;
+}
+
 /* effect-shine */
-a.effect-shine:hover {
+.effect-shine:hover {
     -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.4) 30%, #000 50%, rgba(0,0,0,.4) 70%);
     -webkit-mask-size: 200%;
     animation: shine 2s infinite;
