--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -25,7 +25,7 @@
 
 /* effect-shine */
 .effect-shine:hover {
-    -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.4) 30%, #000 50%, rgba(0,0,0,.4) 70%);
+    -webkit-mask-image: linear-gradient(-75deg, rgba($light,.4) 30%, #000 50%, rgba($light,.4) 70%);
     -webkit-mask-size: 200%;
     animation: shine 2s infinite;
 }
