--- a/src/components/pages/experience.scss
+++ b/src/components/pages/experience.scss
@@ -1,17 +1,13 @@
 @import '../../scss/index.scss';
 
-.post {
+.experience {
+    padding: 1rem;
     border-radius: 15px;
     background-color: $light;
     margin-top: 10px;
     margin-bottom: 10px;
-}
 
-.post-body {
-    a {
-        color: darkblue;
-    }
-    p {
-        font-size: larger;
+    .scrollable {
+        overflow-x: auto;
     }
 }
