changed color scheme

--- a/src/components/jumbotron/jumbotron.scss
+++ b/src/components/jumbotron/jumbotron.scss
@@ -44,9 +44,10 @@ $jumbotron-background-color: $dark;
         color: $orange;
     }
     a {
-        color: $light;
+        color: $blue;
     }
     p {
+        color: $white;
         font-size: larger;
     }
 }
