--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,9 +4,9 @@
 @import '../../node_modules/bootstrap/scss/variables';
 @import '../../node_modules/bootstrap/scss/mixins';
 @import '../../node_modules/bootstrap/scss/maps';
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Lexend:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-$font-family-sans-serif: 'Ubuntu', sans-serif;
+$font-family-sans-serif: 'Lexend', sans-serif;
 $theme-colors: map-merge($theme-colors, (
     "primary": $sky,
     "secondary": $sapphire,
