--- a/style.css
+++ b/style.css
@@ -25,8 +25,41 @@ body {
   padding: 14px 16px;
 }
 
+.hover-effect {
+  position: relative;
+  display: inline-block;
+}
+
+.hover-effect:after,
+.hover-effect:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -5px;
+  background: linear-gradient(to right, #1e1e2e, #8aadf4);
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease-out;
+}
+
+.hover-effect::before {
+  top: -5px;
+  transform-origin: left;
+}
+
+.hover-effect:hover::after,
+.hover-effect:hover::before {
+  transform: scaleX(1);
+}
+
 #title{
-  margin-bottom: 4px
+  margin-bottom: 4px;
+}
+
+#title a{
+  color: #4a6a9f;
 }
 
 #name{
