--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto';
-  background-color: #b9c9ed;
+  background-color: #dee7fa;
   overflow: scroll;
   scroll-behavior: smooth;
 }
