--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
 
 iframe {
   right: 0px;
-  width: 100%;
+  width: 90%;
   border: none;
   margin: 0;
   padding: 0;
@@ -94,10 +94,13 @@ iframe {
   margin-top: 5px;
 }
 
+.school-container{
+  display: grid;
+}
+
 .semester{
-  outline: 2px solid black;
-  margin-top: -2px;
-  margin-bottom: -2px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .semester-title{
